# Edgar06081986-bot-aiogram

./: .gitignore  README.md  main.py  pyproject.toml
bot/: config.py  db.py  handlers.py  keyboards.py  logger.py  scheduler.py  states.py
bot/services/: google_api_service.py  google_drive_service.py
bot_aiogram_quick_start_master.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
