[project]
name = "bot-aiogram-quick-start-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.20.0.post0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "APScheduler==3.11.0",
    "attrs==25.3.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "dotenv==0.9.9",
    "frozenlist==1.6.0",
    "google-api-core==2.24.2",
    "google-api-python-client==2.167.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.70.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "magic-filter==1.0.12",
    "multidict==6.4.3",
    "oauth2client==4.1.3",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==6.30.2",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pydantic==2.11.3",
    "pydantic_core==2.33.1",
    "pyparsing==3.2.3",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "yarl==1.20.0"
]